[gd_scene load_steps=2 format=3 uid="uid://contract001"]

[ext_resource type="Script" path="res://scripts/ui/contract_selection.gd" id="1_contract"]

[node name="ContractSelection" type="CanvasLayer"]
script = ExtResource("1_contract")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Title" type="Label" parent="Panel/Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "SELECT CONTRACT"
horizontal_alignment = 1

[node name="ContractsContainer" type="HBoxContainer" parent="Panel/Container"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TimerBar" type="ProgressBar" parent="Panel/Container"]
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="TimerLabel" type="Label" parent="Panel/Container"]
layout_mode = 2
text = "Auto-select in 5.0s"
horizontal_alignment = 1
